@@ -4,7 +4,7 @@ vlad@crystalballinc.com
 
 This is NaviServer module that implements DNS server/proxy.
 It can serve from it own database or perform forwarding to
-another DNS server and cache results. The server doesn't 
+another DNS server and cache results. The server doesn't
 support any database directly, instead it provides commands similar
 route add|del to add/remove DNS records to memory cache.
 
@@ -15,7 +15,7 @@ Compiling and Installing
 To compile this driver, just type make
 
 dns.tcl file may go to /usr/local/ns/modules/tcl directory
-to be loaded on startup. It loads /etc/hosts records into DNS cache as A 
+to be loaded on startup. It loads /etc/hosts records into DNS cache as A
 records and will act as primary DNS server for these hosts.
 
 Configuring
@@ -27,6 +27,7 @@ ns_param	port		2525
 ns_param	address		localhost
 ns_param	ttl		86400
 ns_param	negativettl	3600
+ns_param	cachettl	0
 ns_param	readtimeout	30
 ns_param	writetimeout	30
 ns_param	proxytimeout	3
@@ -39,6 +40,8 @@ ns_param        debug           0
 - port - local UDP/TCP ports to listen
 - address - local addres to bind
 - ttl - default ttl for the records
+- cachettl - TTL to be used for cached records
+- nagativettl - TTL to be used for negative responses
 - readtimeout - timeout for reading
 - proxyhost - remote DNS server where to proxy requests
 - proxyport - port of the remote proxy server
@@ -50,14 +53,14 @@ ns_param        debug           0
 Usage
 
     ns_dns usage:
- 
+
       ns_add name type value... ?ttl?
 
         adds DNS record to the cache.
         name is record domain name like www.cisco.com
           wildcard names are supported:
              ns_dns add *.domain.com A 1.1.1.1
-             all requests for host.domain.com which are 
+             all requests for host.domain.com which are
              not in local cache will be replied with 1.1.1.1
              record.
         type is one of A,NS,PTR,NS,CNAME,MX
@@ -66,7 +69,7 @@ Usage
          MX - preference cname
          NS,PTR,CNAME - domain name
          NAPTR - naming authority (ENUM)
-       
+
        Example:
           ns_dns add www.mydomain.com A 192.168.1.1
           ns_dns add ns.mydomain.com A 192.168.1.1
@@ -88,20 +91,20 @@ Usage
         cached from remote proxy
 
       Example:
-         {ns.mydomain.com A 192.168.1.1 86400} 
-         {www.mydomain.com A 192.168.1.1 86400} 
-         {mydomain.com MX ns.mydomain.com 1 86400} 
-         {mydomain.com NS ns.mydomain.com 86400} 
+         {ns.mydomain.com A 192.168.1.1 86400}
+         {www.mydomain.com A 192.168.1.1 86400}
+         {mydomain.com MX ns.mydomain.com 1 86400}
+         {mydomain.com NS ns.mydomain.com 86400}
          {ftp.mydomain.com CNAME www.mydomain.com 86400}
-        
+
      ns_dns flush
 
         flushes all DNS records from memory cache
 
      ns_dns queue
 
-        returns list with pending requests waiting reply from 
-        the remote proxy  
+        returns list with pending requests waiting reply from
+        the remote proxy
 
 Testing
 
